kubernetes/kustomize/dependency-track/overlays/preprod/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dependencytrack-preprod
  labels:
    name: dependencytrack-preprod
    app.kubernetes.io/name: dependencytrack
    app.kubernetes.io/environment: preprod
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
