kubernetes/kustomize/dependency-track/overlays/preprod/api-statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dependencytrack-api
spec:
  replicas: 1
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: csi-disk-retain
      resources:
        requests:
          storage: 10Gi
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: "opentelemetry/otel-instrumentation"
    spec:
      imagePullSecrets:
        - name: quay-image-pull-secret
      serviceAccount: dependencytrack
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: dependencytrack-api
              topologyKey: kubernetes.io/hostname
      containers:
      - name: api
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 1000
          capabilities:
            drop:
            - ALL
        resources:
          requests:
            memory: "3Gi"
            cpu: "10m"
          limits:
            memory: "8Gi"
            cpu: "4.0"
        livenessProbe:
          $patch: replace
          httpGet:
            path: /api/version
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 5
        readinessProbe:
          $patch: replace
          httpGet:
            path: /api/version
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 10
          failureThreshold: 3
        startupProbe:
          $patch: replace
          httpGet:
            path: /api/version
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 30
