kubernetes/kustomize/dependency-track/overlays/preprod/frontend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dependencytrack-frontend
spec:
  replicas: 1
  template:
    spec:
      serviceAccount: dependencytrack
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        fsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: dependencytrack-frontend
              topologyKey: kubernetes.io/hostname
      containers:
      - name: frontend
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 101
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: nginx-cache
          mountPath: /var/cache/nginx
        - name: nginx-run
          mountPath: /var/run
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d
        - name: nginx-templates
          mountPath: /etc/nginx/templates
        - name: static-config
          mountPath: /opt/owasp/dependency-track-frontend/static
      volumes:
      - name: tmp
        emptyDir: {}
      - name: nginx-cache
        emptyDir: {}
      - name: nginx-run
        emptyDir: {}
      - name: nginx-conf
        emptyDir: {}
      - name: nginx-templates
        emptyDir: {}
      - name: static-config
        emptyDir: {}
